--- a/alumni_website/templates/directory/mentor_directory.html
+++ b/alumni_website/templates/directory/mentor_directory.html
@@ -16,8 +16,8 @@
 <div class="mentors"> 
   <div class="row mb-5">
     <div class="col-12 text-center mb-4 section-header" data-aos="fade-up" data-aos-delay="200">
-      <h3>Success Stories</h3>
-      <p class="lead">Meet some of our distinguished alumni making a difference around the world</p>
+      <h3>Our Mentors</h3>
+      <p class="lead">Request a mentor and get their guidance</p>
     </div>
 
     <div class="search-container text-center mb-5" data-aos="fade-up" data-aos-delay="300">
