--- a/alumni_website/static/messaging/css/messages.css
+++ b/alumni_website/static/messaging/css/messages.css
@@ -6,11 +6,13 @@ body {
 }
 
 .main-chat-wrapper {
-  display: flex;
   height: calc(100vh - 4rem);
-  width: 95%;
-  margin: 2rem auto;
-  gap: 2rem;
+}
+
+.back-button{
+  color: white;
+  background-color: var(--accent-color);
+  
 }
 
 .sidebar {
@@ -105,6 +107,20 @@ body {
   text-align: center;
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+.start-convo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  color: var(--heading-color);
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+
+  height: 100%; 
 }
 
 
