--- a/alumni_website/templates/layout.html
+++ b/alumni_website/templates/layout.html
@@ -20,48 +20,81 @@
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 <body>
+  <div class="container-fluid main-nav">
   <nav class="navbar navbar-expand-md bg-dark navbar-dark nav">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" target="_blank"><img src="{% static 'images/school_logo.avif' %}" alt="Logo" class="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Home</a>
-            </li>  
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'mentor_directory' %}">Mentors</a>
-            </li>  
-            {% if user.mentor %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'mentor_dashboard' %}">Mentor Dashboard</a>
-            </li>  
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'mentor_signup' %}">Become a Mentor</a>
-            </li>  
-            {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout_view' %}">Log Out</a>
-          </li> 
+<div class="collapse navbar-collapse" id="collapsibleNavbar">
+  <ul class="navbar-nav">
+    {% if user.is_authenticated %}
+
+      <!-- Dashboard -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Dashboard
+        </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="{% url 'home' %}">Home</a></li>
+          <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+          <li><a class="dropdown-item" href="{% url 'messages' %}">Your Activity Hub</a></li>
+        </ul>
+      </li>
+
+      <!-- Mentorship -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Mentorship
+        </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="{% url 'mentor_directory' %}">Our Mentors</a></li>
+          {% if user.mentor %}
+            <li><a class="dropdown-item" href="{% url 'mentor_dashboard' %}">Mentor Dashboard</a></li>
           {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login_view' %}">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'sign_up' %}">Sign Up</a>
-            </li>
+            <li><a class="dropdown-item" href="{% url 'mentor_signup' %}">Become a Mentor</a></li>
           {% endif %}
         </ul>
+      </li>
+
+      <!-- Explore -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Explore
+        </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="{% url 'directory' %}">Search Alumni</a></li>
+          <li><a class="dropdown-item" href="{% url 'mentor_directory' %}">Our Mentors</a></li>
+        </ul>
+      </li>
+
+      <!-- Account -->
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout_view' %}">Log Out</a>
+      </li>
+
+    {% else %}
+      <!-- Unauthenticated -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login_view' %}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'sign_up' %}">Sign Up</a>
+        </li>
+      </ul>
+    {% endif %}
+  </ul>
+</div>
+
       </div>
     </div>
   </nav>
+  </div>
 
 <!-- {% if messages %}
   {% for message in messages %}
