--- a/alumni_website/templates/messaging/message.html
+++ b/alumni_website/templates/messaging/message.html
@@ -1,23 +1,25 @@
 {% load static %}
 
-<div class="chat-container"  data-aos="fade-up" data-aos-delay="200">
-  <div class="chat-header">
-    {% if has_mentor == True %}
-      Mentor: 
-    {% endif %}
-    {% if other_user.user.profile.first_name %}
-      {{ other_user.user.profile.first_name }}
-    {% endif %}
-    {% if other_user.user.profile.last_name %}
-      {{ other_user.user.profile.last_name }}
-    {% endif %}
+<div class="chat-container" data-aos="fade-up" data-aos-delay="200">
+  <div class="chat-header d-flex align-items-center justify-content-between">
+    <a href="{% url 'messages' %}"><i class="bi bi-arrow-left back-button"></i></a>
+    <div class="container-fluid">
+      {% if has_mentor %}Mentor: {% endif %}
+      {% if other_user.user.profile.first_name or other_user.user.profile.last_name %}
+        {{ other_user.user.profile.first_name }} {{ other_user.user.profile.last_name }}
+      {% else %}
+        <span style="color: #dddddd;">No name</span>
+      {% endif %}
+    </div>
   </div>
-  
-  <div class="chat-messages" id="chat-box"  data-aos="fade-up" data-aos-delay="300">
 
+  <div class="chat-messages" id="chat-box" data-aos="fade-up" data-aos-delay="300">
     {% for message in messages reversed %}
       {% include 'messaging/partials/chat_message.html' with message=message sender=user %}
     {% endfor %}
+    {% if not messages %}
+      <span class="start-convo">Start your conversation :)</span>
+    {% endif %}
   </div>
 
   <form class="chat-input" action="{% url 'chat_room' group_name %}" method="post">
@@ -27,9 +29,9 @@
   </form>
 </div>
 
-  <script>
-    var groupName = "{{ group_name }}"
-    var csrfToken = "{{ csrf_token }}"
-    var currentUserId = "{{ user.id }}"
-  </script>
-  <script src="{% static 'messaging/javascript/messaging.js' %}"></script>
+<script>
+  var groupName = "{{ group_name }}";
+  var csrfToken = "{{ csrf_token }}";
+  var currentUserId = "{{ user.id }}";
+</script>
+<script src="{% static 'messaging/javascript/messaging.js' %}"></script>
