--- a/alumni_website/templates/profiles/view_profile.html
+++ b/alumni_website/templates/profiles/view_profile.html
@@ -17,13 +17,11 @@
 
 
     <div class="alert alert-primary" id="connect_message">
-    <!-- TODO Link to user's messaging chat -->
-    Once {{ profile.last_name }} accepts the request, you can chat with them <a href="#" class="alert-link">here</a>
+    Once {{ profile.last_name }} accepts the request, you can chat with them <a href="{% url 'messages' %}" class="alert-link">here</a>
     </div>
 
     <div class="alert alert-primary" id="mentor_message">
-    <!-- TODO Link to user's messaging chat -->
-    Once {{ profile.last_name }} accepts the mentor request, you can take guidance from them through the chat <a href="#" class="alert-link">here</a>
+    Once {{ profile.last_name }} accepts the mentor request, you can take guidance from them through the chat <a href="{% url 'messages' %}" class="alert-link">here</a>
     </div>
 
 
@@ -54,17 +52,18 @@
   <div class="d-flex gap-2 connection_buttons">
     <form method="POST">
     {% csrf_token %}
-    {% csrf_token %}
     {% if profile.user != user %}
+    {% if view_type == "alumni" %}
     <button class="btn connect btn-sm">
         {% if connection is None %}
             Connect
         {% elif connection.accepted == True %}
             Connected
         {% else %}
-            Pending
+            Connect Request sent
         {% endif %}
     </button>
+    {% elif view_type == "mentor" %}
     {% if mentor_exists %}
     <button class="btn request_mentor btn-sm">
       {% if mentor_match is None %}
@@ -77,6 +76,7 @@
     </button>
     {% endif %}
     {% endif %}
+    {%endif%}
     </form>
   </div>
 </div>
