--- a/alumni_website/templates/layout.html
+++ b/alumni_website/templates/layout.html
@@ -39,7 +39,7 @@
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{% url 'home' %}">Home</a></li>
           <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-          <li><a class="dropdown-item" href="{% url 'messages' %}">Your Activity Hub</a></li>
+          <li><a class="dropdown-item" href="{% url 'messages' %}">Messages</a></li>
         </ul>
       </li>
 
