--- a/alumni_website/templates/authentication/login.html
+++ b/alumni_website/templates/authentication/login.html
@@ -10,6 +10,14 @@ static 'app1/css/style.css'
 
 {% block main %}
 
+    {% if messages %}
+        <div class="alert alert-danger">
+            {% for message in messages %}
+                <p>{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     <div class="main-content">
     <div class="container container-form">
         <div id="logoContainer">
