--- a/alumni_website/templates/profiles/view_profile.html
+++ b/alumni_website/templates/profiles/view_profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-    <link href="{% static 'profiles/css/profile.css' %}" rel="stylesheet">
+    <link href="{% static 'profiles/css/view_profile.css' %}" rel="stylesheet">
     <link rel="icon" href="/path/to/your/favicon.ico" type="image/x-icon">
 {% endblock %}
 
