Optimised Recommendation system

--- a/alumni_website/templates/directory/directory.html
+++ b/alumni_website/templates/directory/directory.html
@@ -50,16 +50,7 @@
   </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
+<!--Recommendation Modal-->
   <div class="modal fade" id="recommendationModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content shadow-lg rounded-4">
@@ -77,15 +68,6 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
 
 <script>
   alumniSearchURL = "{% url 'search_directory' %}"
